<resources>
    <string name="app_name">Mule on Android</string>
    <string name="mule_running">Running in the background</string>
    <string name="theme">Theme</string>
    <string name="theme_system">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="activity_preferences_name">Settings</string>
    <string name="exit">Exit</string>
    <string name="search_label">Search</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="applications">Apps</string>
    <string name="pictures">Pictures</string>
    <string name="documents">Documents</string>
    <string name="select_all">Select All</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="files">files</string>
    <string name="minimize_application">Minimize Mule on Android</string>
    <string name="are_you_sure_you_wanna_leave">Are you sure you want to go back to the home screen?</string>
    <string name="unknown">Unknown</string>
    <string name="open">Open</string>
    <string name="nickname">Nickname</string>
    <string name="how_other_users_will_see_you">How other users will see you</string>
    <string name="other_settings">Other Settings</string>
    <string name="vibrate_on_finished_download">Vibrate when download finishes</string>
    <string name="use_mobile_data">Use 3G/4G for ED2K</string>
    <string name="use_mobile_data_summary">Use mobile network for ed2k downloads. Data Overage charges may apply. Use carefully.</string>
    <string name="cant_open_file">Sorry, don\'t know how to open this file.</string>
    <string name="download_added_to_queue">1 file will start downloading</string>
    <string name="open_menu_action">Open %s</string>
    <string name="search_more_action">Search more</string>
    <string name="remove_torrent_and_data">Remove transfer</string>
    <string name="search">Search</string>
    <string name="transfers">Transfers</string>
    <string name="dummy_title" translatable="false">[Title]</string>
    <string name="dummy_status" translatable="false">[Status]</string>
    <string name="dummy_speed" translatable="false">[Speed]</string>
    <string name="dummy_size" translatable="false">[Size]</string>
    <string name="dummy_extra" translatable="false">[Extra]</string>
    <string name="dummy_seeds" translatable="false">[Seeds]</string>
    <string name="yes_no_cancel_transfer_question">Are you sure you want to stop and remove this download from the list?</string>
    <string name="yes_no_cancel_delete_transfer_question">Are you sure you want to cancel this download?</string>
    <string name="yes_no_dialog_remove_file">Remove file</string>
    <string name="pause_torrent_menu_action">Pause</string>
    <string name="resume_torrent_menu_action">Resume</string>
    <string name="im_on_it">I\'m on it…</string>
    <string name="transfers_settings">Transfers settings</string>
    <string name="transfers_max_downloads_summary">Max Downloads</string>
    <string name="transfers_max_downloads">Max Downloads</string>
    <string name="transfers_max_total_connections_summary">Max Total Connections</string>
    <string name="transfers_max_total_connections">Max Total Connections</string>
    <string name="search_block_action">Block search result</string>
    <string name="dummy_summary" translatable="false">[Summary]</string>
    <string name="dummy_engine" translatable="false">[Engine]</string>
    <string name="complete_sources">Complete %1$d</string>
    <string name="show_transfers_on_download_start">Show Transfers On Download Start</string>
    <string name="dialog_new_transfer_text_text">Are you sure you want to download %1$s (%2$s)</string>
    <string name="dialog_new_transfer_check_text">Show this next time</string>
    <string name="show_new_transfer_dialog">Show New Transfer dialog</string>
    <string name="dummy_action" translatable="false">[Action]</string>
    <string name="dummy_content_description" translatable="false">[dummy description]</string>
    <string name="toast_on_disconnect">ED2K session stopped. All transfers have stopped.</string>
    <string name="toast_on_connect">ED2K session started.</string>
    <string name="seeds_n">Seeds: %s</string>
    <string name="size_unknown">size unknown</string>
    <string name="storage_preference_title">Select Storage Location</string>
    <string name="storage_preference_summary">The default storage location where files will be saved.</string>
    <string name="ed2k" translatable="false">ED2K</string>
    <string name="ed2k_network_summary">Connection status</string>
    <string name="retry_search">Retry</string>
    <string name="no_results_feedback">No results were found.</string>
    <string name="transfers_select_all">all</string>
    <string name="transfers_select_downloading">downloading</string>
    <string name="transfers_select_completed">completed</string>
    <string name="transfers_context_menu_clear_finished">Clear all finished transfers</string>
    <string name="transfers_context_menu_copy_link_copied">Link copied to clipboard</string>
    <string name="transfers_context_menu_copy_name">Copy file name</string>
    <string name="transfers_context_menu_copy_name_copied">File name copied to clipboard</string>
    <string name="remote_file_names">Names reported by sources</string>
    <string name="remote_file_names_empty">No source has reported a file name yet</string>
    <string name="transfers_context_menu_copy_link">Copy link</string>
    <string name="transfers_context_menu_pause_stop_all_transfers">Pause/Stop all transfers</string>
    <string name="transfers_context_resume_all_torrent_transfers">Resume all torrent transfers</string>
    <string name="transfers_context_menu_show_path_title">The file path</string>
    <string name="transfers_context_menu_show_path_body">Base dir: %1$s\nFile:%2$s</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="please_check_connection_status_before_resuming_download">Please check the status of your internet connection before resuming.</string>
    <string name="add_transfer_label">Paste a ED2K link</string>
    <string name="please_enter_valid_url">Please enter a valid link</string>
    <string name="magnet_url_added">Link added to transfers</string>
    <string name="torrent_url_added">ED2K link added to transfers.</string>
    <string name="cant_resume_torrent_transfers">Cannot resume torrent transfers. Check status of "Settings" > "BitTorrent Connection Status"</string>
    <string name="confirm_download">Confirm Download</string>
    <string name="saving_to_sd_card">Saving to SD card.</string>
    <string name="android_will_erase_files_if_frostwire_is_uninstalled">Android will erase downloaded files if Mule on Android is uninstalled.</string>
    <string name="saving_to_internal_memory">Saving to Internal Memory</string>
    <string name="saving_to_internal_memory_description">You also have an SD card (%1$s free)</string>
    <string name="device_storage">Device\'s Storage</string>
    <string name="sdcard_storage">SD\'s Storage</string>
    <string name="storage_setting_warning">WARNING: All files saved by Mule on Android onto the SD card will be deleted BY ANDROID, not Mule on Android, if you uninstall the app.</string>
    <string name="storage_setting_confirm_dialog_title">SD CARD</string>
    <string name="storage_setting_confirm_dialog_text">I understand that all files downloaded to the SD Card by Mule on Android will be deleted BY ANDROID the moment the Mule on Android application is uninstalled from this device and I will not hold Mule on Android LLC liable for any files lost.</string>
    <string name="available">available</string>
    <string name="finishing">Finishing</string>
    <string name="app_shutdown_dlg_title">Shutdown</string>
    <string name="app_shutdown_dlg_message">This will shutdown all transfers and background services. Are you sure?</string>
    <string name="dummy_build" translatable="false">[build number]</string>
    <string name="try_other_keywords">Try fewer/different keywords</string>
    <string name="try_frostwire_plus_for_more_results" translatable="false">Try Mule on Android for more results</string>
    <string name="your_installation_is_complete">Your installation is complete.</string>
    <string name="thank_you">Thank you!</string>
    <string name="keep_in_touch">Keep in touch!</string>
    <string name="why_we_need_storage_permissions">Why we need storage permissions.</string>
    <string name="why_we_need_storage_permissions_summary">Mule on Android is a file downloader app, therefore it needs to be able to access your disk.\n\nWithout your permissions Mule on Android cannot work.\n\nWant to try again?</string>
    <string name="request_again">Request Again</string>
    <string name="notify_jdonkey_is_running">Notify if Mule on Android is running</string>
    <string name="notify_jdonkey_is_running_summary">Show a permanent Android notification with status of transfers</string>
    <string name="safe_mode">Safe mode</string>
    <string name="share_media_downloads">Publish downloads</string>
    <string name="share_media_downloads_summary">Add downloaded media files to Android media library to provide access to files from other applications</string>
    <string name="safe_mode_summary">By disabling this checkbox you agree to see any published materials having been requested. Otherwise search results will be filtered</string>
    <string name="storage_picker_treeuri_null">No storage path was selected</string>
    <string name="storage_picker_treeuri_not_directory">The selected path is not a directory</string>
    <string name="storage_picker_treeuri_cant_write">Mule on Android can\'t write on the selected storage path</string>
    <string name="storage_picker_treeuri_error">Unexpected error picking storage path</string>
    <string name="selected">selected</string>
    <string name="check_internet_connection">Check Internet connection</string>
    <string name="emule_collection">EMule collection</string>
    <string name="pick_the_files_you_want_to_download_from_this_torrent">Pick the files you want to download from this collection</string>
    <string name="sd_permission_no_accessible_path">The path you selected in the SD is not accessible any more. Press OK to select again.</string>
    <string name="cancel">Cancel</string>
    <string name="common_settings">Common settings</string>
    <string name="listen_port">Listen port</string>
    <string name="listen_port_summary">Port for incoming connections</string>
    <string name="NA" translatable="false">N/A</string>
    <string name="users_count">Users</string>
    <string name="files_count">Files</string>
    <string name="user_id">User ID</string>
    <string name="servers_settings">Servers settings</string>
    <string name="servers">Servers</string>
    <string name="connect_on_start_server">Connect on startup</string>
    <string name="dummy_downloads_indicator" translatable="false">0 @ 0 KB/s</string>
    <string name="dummy_uploads_indicator" translatable="false">0 @ 0 KB/s</string>
    <string name="logs_verbose">Verbose</string>
    <string name="logs_refresh">Refresh</string>
    <string name="logs_copy">Copy</string>
    <string name="logs_share">Share</string>
    <string name="logs_clear">Clear</string>
    <string name="folders_scan">Scan</string>
    <string name="folders_remove">Remove</string>
    <string name="search_filter_complete">Complete</string>
    <string name="search_filter_half" formatted="false">50%+ complete</string>
    <string name="search_filter_sort_sources">Sort: sources</string>
    <string name="search_filter_clear">Clear</string>
    <string name="search_filter_more">More results</string>
</resources>