<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011-2016, FrostWire(R). All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:frostwire="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <org.dkf.jmule.views.ClearableEditTextView
            android:id="@+id/fragment_transfers_add_transfer_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            frostwire:clearable_hint="@string/add_transfer_label"/>

    <RadioGroup
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:checkedButton="@+id/fragment_transfers_button_select_all"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/fragment_transfers_button_select_all"
                style="@style/TransfersButton"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/transfers_select_all"
                android:textSize="12sp"/>

        <RadioButton
                android:id="@+id/fragment_transfers_button_select_downloading"
                style="@style/TransfersButton"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/transfers_select_downloading"
                android:textSize="12sp"/>

        <RadioButton
                android:id="@+id/fragment_transfers_button_select_completed"
                style="@style/TransfersButton"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_background_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/transfers_select_completed"
                android:textSize="12sp"/>
    </RadioGroup>

    <!--
      Bulk action for the finished tab. It lives outside the list rather than inside the
      menu behind the header, because emptying a list of finished downloads is what
      people come to that tab to do, and a per-item menu makes it a chore of one tap per
      row. Shown only on that tab, and only while there is something on it.
    -->
    <LinearLayout
            android:id="@+id/fragment_transfers_completed_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_page_background"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingLeft="@dimen/card_gutter"
            android:paddingRight="@dimen/card_gutter"
            android:paddingTop="6dp"
            android:visibility="gone">

        <TextView
                android:id="@+id/fragment_transfers_button_clear_completed"
                style="@style/BulkActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Remove all (3)"/>

    </LinearLayout>

    <org.dkf.jmule.views.RichNotification
            android:id="@+id/fragment_transfers_sd_card_notification"
            frostwire:rich_notification_icon="@drawable/sd_card_notification"
            frostwire:rich_notification_title="@string/saving_to_sd_card"
            frostwire:rich_notification_title_underlined="true"
            frostwire:rich_notification_description="@string/android_will_erase_files_if_frostwire_is_uninstalled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <org.dkf.jmule.views.RichNotification
            android:id="@+id/fragment_transfers_internal_memory_notification"
            frostwire:rich_notification_icon="@drawable/internal_memory_notification"
            frostwire:rich_notification_title="@string/saving_to_internal_memory"
            frostwire:rich_notification_title_underlined="true"
            frostwire:rich_notification_description="@string/saving_to_internal_memory_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/app_page_background">
        <org.dkf.jmule.views.SwipeLayout
                android:id="@+id/fragment_transfers_swipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <ExpandableListView
                    android:id="@+id/fragment_transfers_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/app_page_background"
                    android:childDivider="@null"
                    android:clipToPadding="false"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:paddingBottom="@dimen/card_gap"
                    android:fadingEdge="none"
                    android:groupIndicator="@android:color/transparent"/>
        </org.dkf.jmule.views.SwipeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_divider_dark"/>

    <!--
      Status bar. The three counters used to live in a wrap_content container carrying
      layout_gravity="right", which does nothing for horizontal placement inside a
      horizontal LinearLayout - so they were bunched up against the left edge behind a
      stray 1px black spacer. They are now weighted evenly across the full width.

      The KAD counter also borrowed the "upload" triangle; it has its own glyph now, and
      its android:text no longer points at dht_nodes (a "KAD: %1$s" format string, which
      rendered the placeholder verbatim until the first update arrived).
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="@drawable/transfers_indicators_background">

        <TextView
            android:id="@+id/fragment_transfers_text_downloads"
            style="@style/TransfersIndicator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="6dp"
            android:drawableLeft="@drawable/transfers_triangle_downward"
            android:drawableStart="@drawable/transfers_triangle_downward"
            tools:text="@string/dummy_downloads_indicator"/>

        <TextView
            android:id="@+id/fragment_transfers_text_uploads"
            style="@style/TransfersIndicator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="6dp"
            android:drawableLeft="@drawable/transfers_triangle_upward"
            android:drawableStart="@drawable/transfers_triangle_upward"
            tools:text="@string/dummy_uploads_indicator"/>

        <TextView
            android:id="@+id/fragment_transfers_dht"
            style="@style/TransfersIndicator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="6dp"
            android:drawableLeft="@drawable/ic_kad_nodes"
            android:drawableStart="@drawable/ic_kad_nodes"
            tools:text="KAD: 128"/>
    </LinearLayout>

</LinearLayout>
